# AutoDash-OS

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
assets/dummy_usb_files/: sample_songs.txt
src/: main.cpp
src/system/: BluetoothSim.cpp  BluetoothSim.h  ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h  MockI2C.cpp  MockI2C.h  USBMonitor.cpp  USBMonitor.h
src/ui/: BluetoothPanel.h  CameraModule.h  ClimateControl.h  MainWindow.cpp  MainWindow.h  MediaPlayer.cpp  MediaPlayer.h
tests/: CMakeLists.txt  test_config_load.cpp
